--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,16 @@ button {
   position: fixed;
   top: 250px; 
 }
+
+p{
+  background-color: blue; 
+}
+
+.wild-pokemon{
+  cursor: url('https://image.flaticon.com/icons/png/128/361/361998.png') 30 30, auto;
+
+}
+
+#test{
+  background-color: blue; 
+}
