--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,10 @@ p{
 
 .wild-pokemon{
   cursor: url('https://image.flaticon.com/icons/png/128/361/361998.png') 30 30, auto;
+}
 
+.pokeball{
+  
 }
 
 #test{
